--- a/fruits.html
+++ b/fruits.html
@@ -86,7 +86,7 @@
         <button class="btn pill-btn"><a href="Order.html"> Add to Cart</a></button>
     </div>
     <div class="grid-item">
-        <img src="Images\Watermelon2.jpg" alt="Watermelon" height="220px" width="220px"><br>
+        <img src="Images\Watermelon.avif" alt="Watermelon" height="220px" width="220px"><br>
         <div><p>MELON Dark Bell, each (about 1.7kg) <br> Rs.255.00</p></div>
         <button class="btn pill-btn"><a href="Order.html"> Add to Cart</a></button>
     </div>
