--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="vegetables.html">Vegetables</a>
             <a href="Dairy products.html">Dairy Products</a>
             <a href="cosmetics and skin care.html">Cosmetics and Skin care</a>
-            <a href="Order.html">Cart</a>
+            <a href="https://rovindu123.github.io/Grocies-Super-Market--Updated-Version/">Cart</a>
             <a href="Loyalty registration.html">Sign Up</a>
         </nav>
     </header> 
