--- a/Dairy products.html
+++ b/Dairy products.html
@@ -6,7 +6,7 @@
     <title>Assignment 2</title>
     <link rel="stylesheet" href="Styles\dairyproducts-style.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/x-icon" href="icon512_rounded.png">
+    <link rel="icon" type="image/x-icon" type="image/png" sizes="16x16" href="favicon_package_v0.16 (1)/favicon-16x16.png">
 </head>
 <body>
     <picture class="image">
