--- a/vegetables.html
+++ b/vegetables.html
@@ -6,7 +6,7 @@
     <title>Assignment 2</title>
     <link rel="stylesheet" href="Styles\vegtables-style.css">
     <link rel="manifest" href="manifest.json">
-
+    <link rel="icon" type="image/x-icon" href="favicon_package_v0.16 (1)\favicon-16x16.png>
 </head>
 <body>
     <picture class="image">
